--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -77,7 +77,7 @@ section {
     color: #6163f0;
     border: 1px solid #6163f0;
     background-color: transparent;
-    border-radius: 10px;
+    border-radius: 8px;
 }
 
     .btn-outline-purple:hover {
